<resources>
    <string name="app_name">SomeSkills</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="salary">Salary</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="databaseSQLite">If you press show button, text from database print there</string>
    <string name="sqlitetest">SQLiteTest</string>
    <string name="jsontest">JSONTest</string>
    <string name="jsouptest">JSOUPTest</string>
    <string name="parse_json_data">Parse JSON data</string>
    <string name="parseJSON">If you press button parse, you look there data from file item.txt which is on the site \nhttp://www.vodomer.kharkiv.ua/item.txt</string>
</resources>
