<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.gopnick7.someskills.MainActivity">


    <Button
        android:id="@+id/btnSQLite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnJSON"
        android:layout_alignLeft="@+id/btnJSOUP"
        android:layout_alignStart="@+id/btnJSOUP"
        android:layout_marginBottom="48dp"
        android:text="@string/sqlitetest" />

    <Button
        android:id="@+id/btnJSON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/jsontest" />

    <Button
        android:id="@+id/btnJSOUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnJSON"
        android:layout_alignStart="@+id/btnJSON"
        android:layout_below="@+id/btnJSON"
        android:layout_marginTop="48dp"
        android:text="@string/jsouptest" />
</RelativeLayout>
